--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
           <div class="logs-controls">
             <div class="row mb-3">
               <div class="col-md-6">
-                <label for="log-file-select" class="form-label">Log File:</label>
-                <select id="log-file-select" class="form-select form-select-sm"></select>
+                <label class="form-label">Log File:</label>
+                <div class="form-control form-control-sm bg-dark text-light">/var/log/mariadb/galera-error.log</div>
               </div>
               <div class="col-md-3">
                 <label for="log-lines" class="form-label">Lines to show:</label>
