--- a/templates/index.html
+++ b/templates/index.html
@@ -265,6 +265,35 @@
     </div>
   </div>
 
+  <!-- Weight Management Modal -->
+  <div class="modal fade" id="weightModal" tabindex="-1" aria-labelledby="weightModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-light">
+        <div class="modal-header">
+          <h5 class="modal-title" id="weightModalLabel">Set Server Weight</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="weightForm">
+            <div class="mb-3">
+              <label for="serverHost" class="form-label">Server:</label>
+              <input type="text" class="form-control" id="serverHost" readonly>
+            </div>
+            <div class="mb-3">
+              <label for="serverWeight" class="form-label">Weight (0-256):</label>
+              <input type="number" class="form-control" id="serverWeight" min="0" max="256" required>
+              <div class="form-text">Weight 0 means the server will not receive new connections but existing connections remain active.</div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" onclick="setServerWeight()">Set Weight</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="/static/js/charts.js"></script>
     <script src="/static/js/main.js"></script>
