--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,9 @@
         <button class="btn btn-sm btn-outline-warning ms-2" onclick="confirmRestart()">
           Restart HAProxy
         </button>
+        <a href="{{ url_for('logout') }}" class="btn btn-sm btn-outline-danger ms-2">
+          <i class="fas fa-sign-out-alt me-1"></i>Logout
+        </a>
       </div>
     </div>
 
